--- a/pkg/Thresher/TODO
+++ b/pkg/Thresher/TODO
@@ -1,3 +1,7 @@
+Extend 'screeplot' method to take an argument restricting the number
+of component bars to display.  (Useful when the matrix dimension >>
+100.)
+
 Write man pages.
 
 Write vignette.
