[1] Fixed the bug in the Kmeans method. [2] Added new algorithm, adDimLeap. [3] Added a new function, compareAgDimMethods [4] Bumped the minor version number to reflect new features.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@31 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/PCDimension/NEWS
+++ b/pkg/PCDimension/NEWS
@@ -1,6 +1,25 @@
 			Dear Emacs, please make this -*-Text-*- mode!
 	**************************************************
 	*						 *
+	*	       1.1 SERIES NEWS			 *
+	*						 *
+	**************************************************
+
+
+NEW FEATURES
+
+    o	Added agDimLeap, a new algorithm to find long steps.
+
+    o	Added a new function, compareAgDimMethods, to report the
+        different dimensions reported by different algorithms.
+
+BUG FIXES
+
+    o	Fixed an error in aDimKeans and agDoimKmeans3 that only
+        flagged half of the "long" steps. 
+
+	**************************************************
+	*						 *
 	*	       1.0 SERIES NEWS			 *
 	*						 *
 	**************************************************
