Removed outdated package.Rd file. Also removed deprecated parts of S4 classes.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@71 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/PCDimension/NEWS
+++ b/pkg/PCDimension/NEWS
@@ -6,6 +6,15 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 1.1.9
+
+UPDATES
+
+    o	Modified use of S4 classes to avoid deprecated and discouraged
+        elements. 
+
+		CHANGES IN R VERSION 1.1.0
+
 NEW FEATURES
 
     o	Added agDimLeap, a new algorithm to find long steps.
@@ -24,6 +33,7 @@ BUG FIXES
 	*						 *
 	**************************************************
 
+		CHANGES IN R VERSION 1.0.0
 
 NEW FEATURES
 
