--- a/pkg/Thresher/NEWS
+++ b/pkg/Thresher/NEWS
@@ -6,6 +6,13 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 1.0.3
+
+NEW FEATURES
+
+    o	Added a "remap" function to match numeric labels across
+    	different cluster assignments.
+
 		CHANGES IN R VERSION 1.0.2
 
 BUG FIXES
