Minor updates to documentation and formatting.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@89 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/tests/test003-metrics.Rmd
+++ b/pkg/BinaryMatrix/tests/test003-metrics.Rmd
@@ -5,6 +5,8 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
+### This document tests all metrics provided in the 01-metrics.R file.
+
 ## Our Test Function
 We begin by creating a function that allows us to easily run a pre-made test matrix against a variety of metrics to return runtime and error. Because we know hierarchical clustering to be the fastest plot to compute, we will use it as the confirmatory plot of our output.
 ```{r prep}
