Fixed the bug in removeDuplicates when features only has one column (drop=FALSE). Added options to "try" commands to write the errors to standard output, so they show up in the HTM file after knitting.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@97 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/tests/test001-binmat.Rmd
+++ b/pkg/BinaryMatrix/tests/test001-binmat.Rmd
@@ -55,6 +55,7 @@ The BinaryMatrix object will build with matrix input of 0s and 1s in integer, nu
 Clearly, the BinaryMatrix object accepts input in the form of a matrix. Does it accept other object structures?
 
 ```{r}
+options(try.outFile = stdout())
 t_df <- data.frame(matrix(as.numeric(rbinom(400, 1, 0.5)), nrow = 20, ncol = 20))
 try(bm_df <- BinaryMatrix(t_df, f20))
 try(summary(bm_df))
