Fixed a bug in the implementation of Goodman-Kruskal. Added "[" method to DistanceVids. Added "recolor" and "downsample" methods.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@100 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/TODO
+++ b/pkg/BinaryMatrix/TODO
@@ -1,4 +1,3 @@
-Extend 'screeplot' method to take an argument restricting the number
-of component bars to display.  (Useful when the matrix dimension >>
-100.)
+1. Decide if we want to add any more binary distance measures formt he
+Choi paper.
 
