--- a/pkg/BinaryMatrix/NEWS
+++ b/pkg/BinaryMatrix/NEWS
@@ -1,33 +1,44 @@
 			Dear Emacs, please make this -*-Text-*- mode!
 	**************************************************
 	*						 *
-	*	       1.0 SERIES NEWS			 *
+	*	       0.0 SERIES NEWS			 *
 	*						 *
 	**************************************************
 
 
-		CHANGES IN R VERSION 1.0.2
-
-BUG FIXES
-
-    o	Simulation code works differently on different machines, even
-        when setting the same seed. The issue can be traced through
-        reliance on 'mvrnorm"' and 'eigen' to simulate multivariate
-        normal data. When there are repeated eigenvalues, different
-        linear alg=ebra routines can (legitimetaly) choose different
-        orthogonal bases for the correrspsoninf multidimensional
-        eigenspace. Have tried to refactor the test code so that this
-        doesn't matter.
-
-MAINTENANCE
-
-    o	Updated use of S4 class defintions to avod newly deprecated methods.
-
-		CHANGES IN R VERSION 1.0.0
+		CHANGES IN R VERSION 0.1.1
 
 NEW FEATURES
 
-    o	Initial version. Classes Thresher, Reaper, Auer-Gervini.
+    o	Added a "[" method to the DistanceVis class. Note the slowest
+        part of this method presently is subsetting the hierarchical
+        clusters, since it is implemented using the "prune" routine in
+        "dendextend", which removes one leaf at a time.
+
+    o	Added a "recolor" function thast allows you to make the
+        color-and-symbol assigments for different distance matrices
+        behave "as consistenbtly as possible".
+
+    o	Added a "downsample" function based on Peng Qiu's idea in the
+        SPADE package. The point is to take a subsample that
+        deliberately does *not* preserve the popultion distribution.
+        Instead, it samples fewer items fromt he most dense areas ofg
+        the distribution in order to preserve samples of as many
+        clusters as possible.
+
+BUG FIXES
+
+    o	Fixed a bug in the definiton of the Goodman-Kruskal
+        similarity measure, where half a term (inside a "max"
+        computation) had been accidentally omitted.
+
+		CHANGES IN R VERSION 0.1.0
+
+NEW FEATURES
+
+    o	Initial version. Classes BVinaryMatrix and DistanceVis,
+    	although the first may be misleading and the second is a lousy
+    	name. Both may change by version 1.0.
 
 BUG FIXES
 
