Moved a bunch of files around. Mainly moved tge text-based GytoGPS out of the package (since it generates a size warning) to a folder at a higher level of the R-Forge project hierarchy.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@101 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/TODO
+++ b/pkg/BinaryMatrix/TODO
@@ -1,3 +1,6 @@
-1. Decide if we want to add any more binary distance measures formt he
+1. Decide if we want to add any more binary distance measures from the
 Choi paper.
+2. Decide if the BinaryMatrix class should carry along data frames
+for both the columns and the rows. If so, then we might also want to
+define a transpose ("t") method.
 
