Changed BinaryMatrix class so it carries along both row and column annotations. Added a transpose ("t") operation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@104 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NEWS
+++ b/pkg/BinaryMatrix/NEWS
@@ -6,6 +6,19 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.3.0
+
+INCOMPATIBLE CHANGES
+
+    o	Decided that the BinaryMatrix class needs to carry along
+        information about both rows and columns, and not just
+        columns. As a results, changed the name of te "featresa" slot
+        to "columnInfo, and added a parallel "rowInfo" slot.
+
+NEW FEATURES
+
+    o	Added a transpose ("t") operator for a BinaryMatrix. 
+
 		CHANGES IN R VERSION 0.2.0
 
 NEW FEATURES
