Implemented igraph visualizations. Also fixed a bug where names/labels were not begin propagated correctly. Finally, updated CML500 and CML100 to ensure that they have the correct LGF feature info.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@106 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/BinaryMatrix/NEWS
+++ b/pkg/BinaryMatrix/NEWS
@@ -6,6 +6,12 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.5.0
+
+NEW FEATURES
+
+    o	Added a new visualization, based on igraph.
+
 		CHANGES IN R VERSION 0.4.0
 
 INCOMPATIBLE CHANGES
