--- a/pkg/BinaryMatrix/NEWS
+++ b/pkg/BinaryMatrix/NEWS
@@ -6,6 +6,13 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.6.0
+
+NEW FEATURES
+
+    o	Added new automatically computed graph layouts based on MDS
+        and t-SNE.
+
 		CHANGES IN R VERSION 0.5.0
 
 NEW FEATURES
