--- a/pkg/BinaryMatrix/NEWS
+++ b/pkg/BinaryMatrix/NEWS
@@ -6,6 +6,18 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.6.2
+
+NEW FEATURES
+
+    o	Added a "recoverCluster" function to the "DistanceVis"
+        class. May eventually be converted to a "predict" method.
+
+BUG FIXES
+
+    o	Fixed a "drop=FALSE" bug with subsetting "info" components
+        when they are single-column data frames.
+
 		CHANGES IN R VERSION 0.6.0
 
 NEW FEATURES
