Major change: renamed "BinaryMatrix" package as "Mercator"
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@112 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -6,6 +6,19 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.7.0
+
+BREAKING CHANGES
+
+    o	Renamed the "DistanceVis" class to "Mercator".
+
+    o	Renamed the hwole package fromk "BinaryMatrix" to "Mercator"
+
+BUG FIXES
+
+    o	Fixed a "drop=FALSE" bug with subsetting "info" components
+        when they are single-column data frames.
+
 		CHANGES IN R VERSION 0.6.2
 
 NEW FEATURES
