Fixed label bug in "recolor"; updated data objects.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@113 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -6,6 +6,15 @@
 	**************************************************
 
 
+		CHANGES IN R VERSION 0.7.1
+
+BUG FIXES
+
+    o	Fixed a labeling bug in "recolor".
+
+    o	Updated data objects to use "Mercator" rather than
+        "BinaryMatrix". 
+
 		CHANGES IN R VERSION 0.7.0
 
 BREAKING CHANGES
