--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -1,10 +1,17 @@
 			Dear Emacs, please make this -*-Text-*- mode!
 	**************************************************
 	*						 *
-	*	       0.0 SERIES NEWS			 *
+	*	       0.7 SERIES NEWS			 *
 	*						 *
 	**************************************************
 
+
+		CHANGES IN R VERSION 0.7.2
+
+BUG FIXES
+
+    o	Fixed a bug in "downsample", where probabilities could be
+        greater than one.
 
 		CHANGES IN R VERSION 0.7.1
 
