--- a/pkg/Mercator/vignettes/vignette_d1.Rmd
+++ b/pkg/Mercator/vignettes/vignette_d1.Rmd
@@ -2,17 +2,19 @@
 title: "Using the Mercator Package"
 author: "Kevin R. Coombes, Zachary B. Abrams, C.E. Coombes, Suli Li"
 date: "`r Sys.Date()`"
-output: 
-  html_document:
-    theme: yeti
-    highlight: kate
-    toc: true
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Mercator}
+  %\VignetteKeywords{Mercator,clustering,visualization,PAM,Multi-dimensional scaling,t-distributed Stochastic Neighbor Embedding}
+  %\VignetteDepends{Mercator}
+  %\VignettePackage{Mercator}
+  %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE, results="hide"}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, fig.width=7,fig.height=5,echo=TRUE)
 ```
 
 # Introduction
@@ -38,11 +40,7 @@ thoroughly explore the data set.
 First we load the R library package *Mercator*.
 ```{r library}
 library(Mercator)
-suppressWarnings( suppressMessages( library(Thresher) ))
-```
-
-```{r path}
-#We need to decide where to store the test data set and set the path.
+#suppressWarnings( suppressMessages( library(Thresher) ))
 ```
 
 ### A Limited, Sample Dataset
@@ -52,8 +50,8 @@ Mitelman database. Cytogenetic abnormalities, recorded in Mitelman as text
 strings have been pre-processed with the *CytoGPS* package into 
 binary vectors. For the sake of clarity and efficiency, we have chosen a subset of patients and features for this example.
 ```{r data}
-setwd("C:/Cat/01KRCLab/SVN/thresher/pkg/Mercator/vignettes") #for the time being
-my.data <- read.csv("Mercator_Test_Data.csv", header=TRUE)
+filename <- system.file("Examples/Mercator_Test_Data.csv", package="Mercator")
+my.data <- read.csv(filename, header=TRUE)
 dim(my.data)
 ```
 
